# Client-Serveur

Client-master/Client-master/: CMakeLists.txt  README.md  clientcxnmanager.c  clientcxnmanager.h  main.c  makefile
Client-master/Client-master/conf_client/: ConfigClient.ini  confClient.c  confClient.h
Client-master/Client-master/html/: annotated.html  classes.html  clientcxnmanager_8h_source.html  files.html  structjeu-members.html  structjeu.html
Client-master/Client-master/html/search/: all_0.js  classes_0.js
Client-master/Client-master/interface/: InterfaceConnexion.glade  InterfaceJeu.glade  interfaceJeu.c  interfaceJeu.h
Client-master/Client-master/latex/: annotated.tex  refman.tex  structjeu.tex
GestionConfigurations-master/GestionConfigurations-master/: CMakeLists.txt  main.c
GestionConfigurations-master/GestionConfigurations-master/res_client/: ConfigClient.ini  confClient.h
GestionConfigurations-master/GestionConfigurations-master/res_serveur/: confServeur.c  confServeur.h
Serveur-master/Serveur-master/: CMakeLists.txt  Doxyfile  Readme.md  main.c
Serveur-master/Serveur-master/source/: srvcxnmanager.c  srvcxnmanager.h
Serveur-master/Serveur-master/source/AlgoJeu/: jeu.c  jeu.h
Serveur-master/Serveur-master/source/conf_serveur/: ConfigServeur.ini  confServeur.c  confServeur.h
Serveur-master/Serveur-master/source/output/: CsvWriting.c  CsvWriting.h  GestionDesParties.csv
